[gd_scene load_steps=8 format=3 uid="uid://n38piyjvrvlx"]

[ext_resource type="Texture2D" uid="uid://qg0af756hflt" path="res://game/main_menu/background_main_menu.png" id="1_gt60v"]
[ext_resource type="Script" path="res://game/main_menu/main_menu.gd" id="1_kunr0"]
[ext_resource type="Texture2D" uid="uid://b1u3wg4xtwdlv" path="res://game/main_menu/button_hover_main_menu.png" id="2_p07q4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8pa5o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lkce6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l44pa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jjeq6"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kunr0")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_gt60v")

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSeparator" type="HSeparator" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_8pa5o")

[node name="Label" type="Label" parent="TextureRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 6
text = "Main Menu"

[node name="HSeparator3" type="HSeparator" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_lkce6")

[node name="TextureButton" type="TextureButton" parent="TextureRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_hover = ExtResource("2_p07q4")

[node name="Label" type="Label" parent="TextureRect/VBoxContainer/TextureButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = -11.5
offset_right = 30.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "[P]  Play"

[node name="HSeparator2" type="HSeparator" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_l44pa")

[node name="TextureButton2" type="TextureButton" parent="TextureRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_hover = ExtResource("2_p07q4")

[node name="Label" type="Label" parent="TextureRect/VBoxContainer/TextureButton2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = -11.5
offset_right = 43.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "[S] Settings"

[node name="HSeparator4" type="HSeparator" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_jjeq6")

[node name="TextureButton3" type="TextureButton" parent="TextureRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_hover = ExtResource("2_p07q4")

[node name="Label" type="Label" parent="TextureRect/VBoxContainer/TextureButton3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = -11.5
offset_right = 30.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "[Q] Quit
"

[connection signal="pressed" from="TextureRect/VBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/TextureButton3" to="." method="_on_texture_button_3_pressed"]
